<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/football" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/team_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/team_a"
                android:textColor="@drawable/black_text"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/_0_b"
                android:textColor="@drawable/green_263238"
                android:textSize="64sp" />

            <Button
                android:id="@+id/btn_3pts_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:background="@drawable/transparent"
                android:onClick="threePointsA"
                android:text="@string/_3_points_b"
                android:textColor="@drawable/text_color" />

            <Button
                android:id="@+id/btn_2pts_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:background="@drawable/transparent"
                android:onClick="twoPointsA"
                android:text="@string/_a"
                android:textColor="@drawable/text_color" />

            <Button
                android:id="@+id/btn_1ptn_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:background="@drawable/transparent"
                android:onClick="onePointA"
                android:text="@string/_1_point_a"
                android:textColor="@drawable/text_color" />

            <Button
                android:id="@+id/foul_btn_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@drawable/transparent"
                android:onClick="foulA"
                android:text="@string/foul_b"
                android:textColor="@drawable/text_color" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <LinearLayout
            android:id="@+id/team_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/team_b"
                android:textColor="@drawable/black_text"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/_0_a"
                android:textColor="@drawable/green_263238"
                android:textSize="64sp" />

            <Button
                android:id="@+id/btn_3pts_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:background="@drawable/transparent"
                android:onClick="threePointB"
                android:text="@string/_3_points_a"
                android:textColor="@drawable/text_color" />

            <Button
                android:id="@+id/btn_2pts_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:background="@drawable/transparent"
                android:onClick="twoPointsB"
                android:text="@string/_2_points_b"
                android:textColor="@drawable/text_color" />

            <Button
                android:id="@+id/btn_1ptn_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:background="@drawable/transparent"
                android:onClick="onePointB"
                android:text="@string/_1_point_b"
                android:textColor="@drawable/text_color" />

            <Button
                android:id="@+id/foul_btn_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:background="@drawable/transparent"
                android:onClick="foulB"
                android:text="@string/foul_a"
                android:textColor="@drawable/text_color" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_left"
        android:layout_marginStart="@dimen/margin_right"
        android:background="@drawable/transparent"
        android:onClick="resetButton"
        android:text="@string/reset"
        android:textColor="@drawable/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>